# raytracer-domtsoi

./: CMakeLists.txt  README.md
resources/: balls2.pov  beers.pov  cornell.pov  deltatlogo.pov  fresnel1.pov  fresnel2.pov  perlin.pov  recurse_simp2.pov  refract2.pov  simp_cam0.pov  simp_cam1.pov  simp_cam2.pov  simp_cam3.pov  simple-gi.pov  simple.pov  simple_reflect1.pov  simple_reflect2.pov  simple_refract.pov  simple_tri.pov  transforms1.pov  valentine2.pov
src/: Application.cpp  Application.hpp  AxisAlignedBoundingBox.cpp  AxisAlignedBoundingBox.hpp  BoundingBoxNode.cpp  BoundingBoxNode.hpp  Box.cpp  Box.hpp  Camera.cpp  Camera.hpp  Finish.cpp  Finish.hpp  HelperFunctions.cpp  HelperFunctions.hpp  Image.cpp  Image.h  Intersection.cpp  Intersection.hpp  LightSource.cpp  LightSource.hpp  Material.cpp  Material.hpp  Object.cpp  Object.hpp  Parse.cpp  Parse.hpp  Perlin.cpp  Perlin.hpp  Plane.cpp  Plane.hpp  Ray.cpp  Ray.hpp  Scene.cpp  Scene.hpp  Sphere.cpp  Sphere.hpp  Transform.cpp  Transform.hpp  Triangle.cpp  Triangle.hpp  (+3 more)
